refactor: made Problem002 more efficient with getLast